// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedCvxDelegationButton handles badger delegated state 1`] = `
<div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-3 MuiButton-contained-11 makeStyles-badgerDelegated-1 MuiButton-containedPrimary-12 MuiButton-containedSizeSmall-22 MuiButton-sizeSmall-24 MuiButton-disabled-16 MuiButtonBase-disabled-33"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label-4"
    >
      Already Delegated
    </span>
  </button>
</div>
`;

exports[`LockedCvxDelegationButton handles delegated state 1`] = `
<div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-3 MuiButton-contained-11 MuiButton-containedPrimary-12 MuiButton-containedSizeSmall-22 MuiButton-sizeSmall-24"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-4"
    >
      Delegate to Badger
    </span>
    <span
      class="MuiTouchRipple-root-35"
    />
  </button>
</div>
`;

exports[`LockedCvxDelegationButton handles eligible state 1`] = `
<div>
  <button
    class="MuiButtonBase-root-32 MuiButton-root-3 MuiButton-contained-11 MuiButton-containedPrimary-12 MuiButton-containedSizeSmall-22 MuiButton-sizeSmall-24"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-4"
    >
      Delegate to Badger
    </span>
    <span
      class="MuiTouchRipple-root-35"
    />
  </button>
</div>
`;

exports[`LockedCvxDelegationButton handles ineligible state 1`] = `
<div>
  <span
    class=""
    title="You don't have any locked CVX balance to delegate."
  >
    <button
      class="MuiButtonBase-root-43 MuiButton-root-14 MuiButton-contained-22 MuiButton-containedPrimary-23 MuiButton-containedSizeSmall-33 MuiButton-sizeSmall-35 MuiButton-disabled-27 MuiButtonBase-disabled-44"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label-15"
      >
        Delegate to Badger
      </span>
    </button>
  </span>
</div>
`;
